fix: format request creation in OpenAiTripGenerationServiceTest for clarity